--- a/Frontend-Angular/src/index.html
+++ b/Frontend-Angular/src/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
-  <title>FrontendAngular</title>
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+  <title>ABCSQL</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
   <app-root></app-root>
